INCLUDES += -I$(srcdir)
INCLUDES += -I$(srcdir)/../../include/ascent-shared/

noinst_LIBRARIES = libascent.a

libascent_a_SOURCES = \
	ascent_getopt.cpp \
	BufferPool.cpp \
	CallBack.cpp \
	CoreMemoryAllocator_Core.cpp \
	CoreMemoryAllocator.cpp \
	CrashHandler.cpp \
	crc32.cpp \
	CThreads.cpp \
	Log.cpp \
	MemoryLeaks.cpp \
	MersenneTwister.cpp \
	NGLog.cpp \
	PacketLog.cpp \
	StackWalker.cpp \
	Util.cpp \
	Auth/BigNumber.cpp \
	Auth/MD5.cpp \
	Auth/Sha1.cpp \
	Config/Config.cpp \
	Database/CreateInterface.cpp \
	Database/Database.cpp \
	Database/MySQLDatabase.cpp \
	Database/PostgresDatabase.cpp \
	Database/SQLiteDatabase.cpp \
	Network/CircularBuffer.cpp \
	Network/Socket.cpp \
	Network/SocketFreeBSD.cpp \
	Network/SocketLinux.cpp \
	Network/SocketMgrFreeBSD.cpp \
	Network/SocketMgrLinux.cpp \
	Network/SocketMgrPoll.cpp \
	Network/SocketMgrSelect.cpp \
	Network/SocketMgrWin32.cpp \
	Network/SocketOpsFreeBSD.cpp \
	Network/SocketOpsLinux.cpp \
	Network/SocketOpsPoll.cpp \
	Network/SocketOpsSelect.cpp \
	Network/SocketOpsWin32.cpp \
	Network/SocketPoll.cpp \
	Network/SocketSelect.cpp \
	Network/SocketWin32.cpp \
	Threading/Mutex.cpp \
	Threading/ThreadPool.cpp

